# agent-ia-mail

./: .gitignore  Makefile  README.md  all-report.json  expected_true_values_6_pdfs.json  install-linux.sh  install-windows.ps1  pyproject.toml  template.json  template_json.md
evaluation/: commande_achat_CA-2026-201_fax_low_contrast_eval.json  commande_achat_CA-2026-202_rotated_scan_eval.json  commande_achat_CA-2026-203_photo_shadow_eval.json  commande_achat_CA-2026-204_two_pages_table_eval.json  commande_achat_CA-2026-205_mixed_labels_eval.json  commande_achat_CA-2026-206_receipt_like_eval.json  commande_achat_CA-2026-207_cropped_margin_eval.json  commande_achat_CA-2026-208_grid_noise_eval.json  commande_achat_CA-2026-209_stamp_over_text_eval.json  commande_achat_CA-2026-210_english_french_mix_eval.json  commande_achat_CA-2026-211_multi_addresses_eval.json  commande_achat_CA-2026-212_hand_note_overlap_eval.json  commande_achat_CA-2026-213_tiny_dense_eval.json  commande_achat_CA-2026-214_bad_alignment_eval.json  commande_achat_CA-2026-215_partial_table_eval.json
scripts/: clean_outputs.py  evaluate.py  extract.py  extract_vision_ollama.py  pdf_to_pages.py
tests/: test_accounting.py
