[project]
name = "pdf-agent-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.101.0",
    "ollama>=0.6.2",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pypdfium2>=5.9.0",
    "reportlab>=4.5.1",
    "spacy>=3.8.14",
]
